css/style.css
/* ... */
#resume h2 {
	font: bold 2em Lato, sans-serif;
	margin-top: 2em;
	letter-spacing: 3.2px;
	color: #228496;
}

#resume h3 {
	margin-top: 0.4em;
	padding-left: 1.4em;
}

h4 {
	font: normal 1.4em Lato, sans-serif;
	text-transform: uppercase;
	color: #66a2ad;
	letter-spacing: 3px;
	margin: 0;
	padding: 0.8em 0;
}

#resume .col1, #resume .col2 {
	display: inline-block;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	width: 100%;
	height: auto;
	margin-top: 1em;
	padding: 1em 2em;
	vertical-align: top;
}

#resume ul {
	margin-top: 0;
	padding-left: 0; 
}

#resume li {
	padding-left: none;
	list-style: none;
	line-height: 1.5;
	font-size: 16px;
}

#resume i {
	margin-right: 20px;
	color: #66a2ad;
}

#resume .education div p:first-child {
	padding-top: 16px;
	display: block;
	font-style: italic;
	padding-bottom: 0.4em;
	margin-top: 0;
}

#resume .education div p {
	display: inline-block;
	font-style: normal;
	padding: 0;
	line-height: 1.2;
}

#resume .education span {
	display: block;
	margin-top: -20px;
	padding-left: 50px;
	padding-bottom: 0.8em;
}

#resume .education .current span {
	margin-top: -10px;
}

.education i {
	display: inline-block;
	font-size: 2em;
}

#resume .education .current p {
	position: relative;
	top: -14px;
	padding-top: 6px;
}

#resume .education div .general-assembly,  #resume .education div .stanford, #resume .education div .bme {
	display: block;
	padding-left: 50px;
	padding-top: 6px;
	height: 36px;
}

#resume .education div .general-assembly {
	background: url("../image/ga_logo.png") no-repeat 0 8px;
	background-size: 30px;
}

#resume .education div .stanford {
	background: url("../image/stanford.png") no-repeat 0 4px;
	background-size: 30px;
}

#resume .education div .bme {
	background: url("../image/diploma.png") no-repeat;
	background-size: 30px;
}

#resume .skills p {
	text-align: justify;
	padding: 0;
	padding-bottom: 1em;
}

#resume .skills ul {
	border: 1.4px solid #d0d0d0;
	padding: 8px;
	border-radius: 3px;
	text-align: center;
}

#resume .skills li {
	display: inline-block;
	padding-left: 8px;
}
#resume .skills i {
	margin-right: 8px;
	font-size: 1em;
}

#resume .col2 div {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	width: 100%;
	background: #228996;
	border-radius: 3px;
	padding: 0.4em 0;
}

#resume .col2 i {
	margin: 0;
	font-size: 20px;
	color: #ffffff;
	padding-right: 3px;
}

#resume .col2 span {
	display: inline-block;
	width: auto;
	line-height: 20px;
	font-size: 1.6em;
	color: #ffffff;
	text-transform: uppercase;
	font-weight: 300;
	letter-spacing: 2.4px;
	padding-left: 0.4em;
	line-height: 1.2em;
}

#resume .col2 span:first-child {
	width: 180px;
}

#resume .col2 div + p {
	text-transform: uppercase;
	font-weight: 300;
	letter-spacing: 3px;
	padding: 8px 0 4px 8px;
	margin: 0;
	line-height: normal;
}

#resume .col2 p {
	/*display: inline-block;*/
	padding: 0 8px;
	margin-bottom: 12px;
	line-height: 1.4;
	letter-spacing: 1px;
	word-spacing: 4px;
}

#resume .col2 div.lang {
	background: #ffffff;
	line-height: 1.2;
}

#resume div.lang span:first-child {
	display: inline-block;
	width: 70px;
	font-size: 1em;
	color: #000000;
	letter-spacing: normal;
	text-transform: none;
	font-weight: 400;
	padding-left: 0.6em;
}

#resume .lang i {
	margin: 0;
	color: #66a2ad;
	padding-right: 0;
}



/* <<<<<<<<<<<<<<< FOOTER AND CONTACT FORM >>>>>>>>>>>>>>> */


footer {
	width: 100%;
	background-color: #66a2ad;
	color: #ffffff;
	font-weight: 300;
	padding-bottom: 3em;
}

form {
	width: 90%;
	margin: 0 auto;
}

form h2 {
	letter-spacing: 1.9px;
	font-weight: 300;
	margin-left: 0;
	padding-left: 0;
}

form h3 {
	font-size: 2em;
	line-height: 1.4em;
	margin: 0 0 1em 0;
	padding: 2em 0 0 0;
}

form div {
	box-sizing: border-box;
	-moz-box-sizing: border-box; /* Firefox */
	width: 100%;
}

form div.col1 {
	margin-top: 1.2em;
	width: auto;
}

form label {
	display: block;
	padding-top: 6px;
	margin: 0.4em 3em 0 0;
}

form input, form input.clearfix {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	display: block;
	margin-top: 4px;
	width: 18.4em;
	height: 2.6em;
	padding-left: 0.6em;
	color: #000000;
}

form textarea {
	box-sizing: border-box;
	-moz-box-sizing: border-box; /* Firefox */
	margin-top: 1.8em;
	height: 10.4em;
	width: 100%;
	text-transform: uppercase;
	padding-top: 0.8em;
	padding-left: 0.6em;
	color: #000000;
}

form input:focus, form textarea:focus {
	background-color: #e4fdaf;
	border: 1px solid #007d9c;
	box-shadow: none;
}

#send-mail {
	box-sizing: border-box;
	-moz-box-sizing: border-box; /* Firefox */
	width: 100%;
	position: relative;
	top: 14px;
	padding: 0.6em 0;
	color: #ffffff;
	background-color: #FFB671;
	text-transform: uppercase;
	border: none;
}

/* <<<<<<<<<<<<<<< MEDIA QUERIES >>>>>>>>>>>>>>> */

@media (min-width:  980px) {
	#profile {
		display: block;
		width: 22%;
		overflow: auto;
		position: fixed;
		z-index: 350;
	}

	#portfolio, #resume, footer {
		box-sizing: border-box;
		-moz-box-sizing: border-box;
		width: 78%;
		margin-left: 22%;
	}
	.mobile-nav {
		display: none;
	}
	nav {
		width: 78%;
		display: block;
	}
	nav a {
		display: inline-block;
	}
	.summary {
		display: inline-block;
		width: 38%;
		float: right;
	}

	.description {
		display: inline-block;
		float: left;
		width: 62%;
	}

	#resume .col1, #resume .col2 {
		box-sizing: border-box;
		-moz-box-sizing: border-box;
		width: 49%;
		padding-right: 0;
	}
	
	div.project {
		margin: 1.8em 4em;
	}
	
	form div.col1 {
		display: inline-block;
		width: 40%;
		min-width: 276px;
	}
	
	form div.col2 {
		display: inline-block;
		width: 59%;
		min-width: 
	}
}

